# Fat-Pack

./: .gitignore  README.md  build_release.py  colab_tpu_demo.py  fattummy.py  pyproject.toml  setup.py  test.ipynb  tmp_run_tests.py  verify_framework.py  verify_hardware.py
.github/workflows/: publish.yml
FatTummy/: __init__.py  engine.py  exceptions.py  installer.py  interactive.py  predictor.py
FatTummy/data/: __init__.py  loader.py
FatTummy/inference/: __init__.py  cloud_adapters.py  local_adapters.py
FatTummy/models/: __init__.py  mooe.py
FatTummy/tuning/: __init__.py  trainer.py
old versions/: fattummy-0.2.6-py3-none-any.whl  fattummy-0.2.7-py3-none-any.whl  fattummy-0.3.0-py3-none-any.whl
tests/: test_regressions.py  test_suite.py
